[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-amphi"
version = "0.8.28"
description = "Amphi is a no-code ETL extension for Jupyterlab."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Thibaut Gourdel", email = "tgourdel@amphi.ai" }
]
keywords = ["amphi", "etl", "micro etl", "jupyterlab-extension", "data integration", "data pipelines"]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
]

[project.urls]
Documentation = "https://docs.amphi.ai"
Homepage = "https://amphi.ai"

[tool.hatch.build.targets.sdist]
artifacts = ["amphi"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel]
include = [
    "/amphi",
]

# share/jupyter/labextensions is present in the Python environment and is the 
# designated folder from wich jupterlab/lite takes its extensions
[tool.hatch.build.targets.wheel.shared-data]
amphi = "share/jupyter/labextensions/@amphi"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm run build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]
